# lngterm

./: Cargo.toml  LICENSE  README.md  bench.sh  build.rs
native/: serial.c  serial.h
pyterm/: pyterm.py
src/: main.rs  reactor.rs  serial.rs  tasker.rs
